--- a/src/GISCommunity/GISCommunity/GISCommunity.csproj
+++ b/src/GISCommunity/GISCommunity/GISCommunity.csproj
@@ -39,6 +39,18 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Microsoft.Web.RedisOutputCacheProvider, Version=1.6.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Web.RedisOutputCacheProvider.1.6.4\lib\net40\Microsoft.Web.RedisOutputCacheProvider.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.Web.RedisSessionStateProvider, Version=1.6.4.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Web.RedisSessionStateProvider.1.6.4\lib\net40\Microsoft.Web.RedisSessionStateProvider.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="StackExchange.Redis.StrongName, Version=1.0.316.0, Culture=neutral, PublicKeyToken=c219ff1ca8c2ce46, processorArchitecture=MSIL">
+      <HintPath>..\packages\StackExchange.Redis.StrongName.1.0.450\lib\net45\StackExchange.Redis.StrongName.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -103,6 +115,16 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebApi\Controllers\CommunityGroupsController.cs" />
+    <Compile Include="WebApi\Controllers\CommunityUsersController.cs" />
+    <Compile Include="WebApi\Controllers\PortalsController.cs" />
+    <Compile Include="WebApi\Controllers\UsersController.cs" />
+    <Compile Include="WebApi\Models\Community.cs" />
+    <Compile Include="WebApi\Models\Folder.cs" />
+    <Compile Include="WebApi\Models\Group.cs" />
+    <Compile Include="WebApi\Models\RegionModel.cs" />
+    <Compile Include="WebApi\Utils\HttpRequestMessageExtensions.cs" />
+    <Compile Include="WebApi\Utils\RequestFormatHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
