--- a/src/GISCommunity/GISCommunity/Web.config
+++ b/src/GISCommunity/GISCommunity/Web.config
@@ -11,6 +11,11 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <clear />
+    <add name="SQLStore" connectionString="Data Source=.\SQLExpress;Integrated Security=true;Initial Catalog=OneGISDB;" providerName="System.Data.SqlClient" />
+    <add name="CacheDB" connectionString="localhost" providerName="StackExchange.Redis" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
@@ -24,7 +29,53 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>     
     </pages>
-  </system.web>
+  <caching>
+      <outputCache defaultProvider="MyRedisOutputCache">
+        <providers>
+          <!-- Either use 'connectionString' and provide all parameters as string OR use 'host','port','accessKey','ssl','connectionTimeoutInMilliseconds' and 'operationTimeoutInMilliseconds'. -->
+          <!-- 'databaseId' and 'applicationName' can be used with both options. -->
+          <!--
+          <add name="MyRedisOutputCache" 
+            host = "127.0.0.1" [String]
+            port = "" [number]
+            accessKey = "" [String]
+            ssl = "false" [true|false]
+            databaseId = "0" [number]
+            applicationName = "" [String]
+            connectionTimeoutInMilliseconds = "5000" [number]
+            operationTimeoutInMilliseconds = "1000" [number]
+            connectionString = "<Valid StackExchange.Redis connection string>" [String]
+            loggingClassName = "<Assembly qualified class name that contains logging method specified below>" [String]
+            loggingMethodName = "<Logging method should be defined in loggingClass. It should be public, static, does not take any parameters and should have a return type of System.IO.TextWriter.>" [String]
+          />
+          -->
+          <add name="MyRedisOutputCache" type="Microsoft.Web.Redis.RedisOutputCacheProvider" host="127.0.0.1" accessKey="" ssl="false" />
+        </providers>
+      </outputCache>
+    </caching><sessionState mode="Custom" customProvider="MySessionStateStore">
+      <providers>
+        <!-- Either use 'connectionString' and provide all parameters as string OR use 'host','port','accessKey','ssl','connectionTimeoutInMilliseconds' and 'operationTimeoutInMilliseconds'. -->
+        <!-- 'throwOnError','retryTimeoutInMilliseconds','databaseId' and 'applicationName' can be used with both options. -->
+        <!--
+          <add name="MySessionStateStore" 
+            host = "127.0.0.1" [String]
+            port = "" [number]
+            accessKey = "" [String]
+            ssl = "false" [true|false]
+            throwOnError = "true" [true|false]
+            retryTimeoutInMilliseconds = "5000" [number]
+            databaseId = "0" [number]
+            applicationName = "" [String]
+            connectionTimeoutInMilliseconds = "5000" [number]
+            operationTimeoutInMilliseconds = "1000" [number]
+            connectionString = "<Valid StackExchange.Redis connection string>" [String]
+            loggingClassName = "<Assembly qualified class name that contains logging method specified below>" [String]
+            loggingMethodName = "<Logging method should be defined in loggingClass. It should be public, static, does not take any parameters and should have a return type of System.IO.TextWriter.>" [String]
+          />
+        -->
+        <add name="MySessionStateStore" type="Microsoft.Web.Redis.RedisSessionStateProvider" host="127.0.0.1" accessKey="" ssl="false" />
+      </providers>
+    </sessionState></system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
