--- a/src/GISCommunity/GISCommunity/packages.config
+++ b/src/GISCommunity/GISCommunity/packages.config
@@ -8,5 +8,8 @@
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.Web.RedisOutputCacheProvider" version="1.6.4" targetFramework="net45" />
+  <package id="Microsoft.Web.RedisSessionStateProvider" version="1.6.4" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="StackExchange.Redis.StrongName" version="1.0.450" targetFramework="net45" />
 </packages>
