--- a/src/GISCommunity/GISCommunity/GISCommunity.csproj
+++ b/src/GISCommunity/GISCommunity/GISCommunity.csproj
@@ -15,7 +15,7 @@
     <AssemblyName>GISCommunity</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
-    <IISExpressSSLPort />
+    <IISExpressSSLPort>44300</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -118,7 +118,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -143,6 +145,7 @@
     <Content Include="packages.config" />
     <Content Include="Sharing\proxy.ashx" />
     <Content Include="Sharing\proxy.config" />
+    <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="Sharing\proxy.xsd">
       <SubType>Designer</SubType>
     </None>
@@ -174,7 +177,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>52222</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:52222/</IISUrl>
+          <IISUrl>https://localhost:44300</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
