Configured initial redirect and custom error page

--- a/src/GISCommunity/GISCommunity/Web.config
+++ b/src/GISCommunity/GISCommunity/Web.config
@@ -28,9 +28,9 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
-      </namespaces>     
+      </namespaces>
     </pages>
-  <caching>
+    <caching>
       <outputCache defaultProvider="MyRedisOutputCache">
         <providers>
           <!-- Either use 'connectionString' and provide all parameters as string OR use 'host','port','accessKey','ssl','connectionTimeoutInMilliseconds' and 'operationTimeoutInMilliseconds'. -->
@@ -53,7 +53,8 @@
           <add name="MyRedisOutputCache" type="Microsoft.Web.Redis.RedisOutputCacheProvider" host="127.0.0.1" accessKey="" ssl="false" />
         </providers>
       </outputCache>
-    </caching><sessionState mode="Custom" customProvider="MySessionStateStore">
+    </caching>
+    <sessionState mode="Custom" customProvider="MySessionStateStore">
       <providers>
         <!-- Either use 'connectionString' and provide all parameters as string OR use 'host','port','accessKey','ssl','connectionTimeoutInMilliseconds' and 'operationTimeoutInMilliseconds'. -->
         <!-- 'throwOnError','retryTimeoutInMilliseconds','databaseId' and 'applicationName' can be used with both options. -->
@@ -76,16 +77,32 @@
         -->
         <add name="MySessionStateStore" type="Microsoft.Web.Redis.RedisSessionStateProvider" host="127.0.0.1" accessKey="" ssl="false" />
       </providers>
-    </sessionState></system.web>
+    </sessionState>
+    <!--<customErrors mode="On" redirectMode="ResponseRewrite">
+      <error statusCode="404" redirect="404.html"/>
+    </customErrors>-->
+  </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
-    
-  <handlers>
+    <defaultDocument enabled="true">
+      <!-- this line enables default documents for a directory -->
+      <files>
+        <clear/>
+        <add value="home/index.html"/>
+      </files>
+    </defaultDocument>
+    <httpErrors errorMode="Custom">
+      <remove statusCode="404"/>
+      <error statusCode="404" path="/home/error/404.html" responseMode="ExecuteURL"/>
+    </httpErrors>
+    <!--<modules runAllManagedModulesForAllRequests="true"/>-->
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
