added pages to website

--- a/src/GISCommunity/GISCommunity/Web.config
+++ b/src/GISCommunity/GISCommunity/Web.config
@@ -85,16 +85,17 @@
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <defaultDocument enabled="true">
-      <!-- this line enables default documents for a directory -->
+      <!-- enables default documents for a directory -->
       <files>
         <clear/>
         <add value="home/index.html"/>
       </files>
     </defaultDocument>
-    <httpErrors errorMode="Custom">
+    <!-- enables Error pages -->
+    <!--<httpErrors errorMode="Custom">
       <remove statusCode="404"/>
       <error statusCode="404" path="/home/error/404.html" responseMode="ExecuteURL"/>
-    </httpErrors>
+    </httpErrors>-->
     <!--<modules runAllManagedModulesForAllRequests="true"/>-->
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
