--- a/src/GISCommunity/GISCommunity/GISCommunity.csproj
+++ b/src/GISCommunity/GISCommunity/GISCommunity.csproj
@@ -117,9 +117,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Home\Error\404.html" />
+    <Content Include="Home\content.html" />
+    <Content Include="Home\css\normalize.css" />
+    <Content Include="Home\css\style.css" />
+    <Content Include="Home\error\404.html" />
     <Content Include="Global.asax" />
+    <Content Include="Home\images\icons\apple-touch-icon.png" />
+    <Content Include="Home\images\icons\favicon.ico" />
+    <Content Include="Home\gallery.html" />
+    <Content Include="Home\group.html" />
+    <Content Include="Home\groups.html" />
     <Content Include="Home\index.html" />
+    <Content Include="Home\js\script.js" />
+    <Content Include="Home\organization.html" />
+    <Content Include="Home\user.html" />
+    <Content Include="Home\webmap\viewer.html" />
+    <Content Include="Home\webscene\viewer.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -162,6 +175,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Home\status\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Home\" />
   </ItemGroup>
